correction overflow fleche gauche carousel

--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -37,6 +37,7 @@
 
 #box1 {
     justify-content: flex-start;
+    overflow: hidden;
 }
 
 #box2 {
